--- a/src/index.css
+++ b/src/index.css
@@ -104,7 +104,12 @@
   text-align: center;
 }
 
-
+.clamp-3 {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
   
 @media (prefers-color-scheme: light) {
   :root {
